--- a/src/App.ejs
+++ b/src/App.ejs
@@ -1,10 +1,9 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>Hello React!</title>
+        <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
     <body>
         <div id="root"></div>
     </body>
-
 </html>
